# ocaml-starter

./: .gitignore  .ocamlformat  README.md  dune-project  esy.json
.github/workflows/: build.yml
esy.lock/: index.json
lib/: dune  math.ml  math.mli
test/: dune  math.ml  test_runner.ml
